--- a/aplikasi-pendaftaran/pom.xml
+++ b/aplikasi-pendaftaran/pom.xml
@@ -26,6 +26,11 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.1.0.Beta1</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
