--- a/aplikasi-pendaftaran-spring/src/main/resources/application.properties
+++ b/aplikasi-pendaftaran-spring/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.jackson.serialization.indent_output=true
